--- a/env.example
+++ b/env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+RESEND_API_KEY=re_123456789
+ADMIN_EMAIL=your-email@example.com
